fix delete in ms controller